--- a/public/stylesheets/one-page-wonder.css
+++ b/public/stylesheets/one-page-wonder.css
@@ -12,7 +12,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('../images/sunrise.JPG') no-repeat center center scroll;
+    background: url('../images/yosemite.jpeg') no-repeat fixed bottom center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
