--- a/public/stylesheets/one-page-wonder.css
+++ b/public/stylesheets/one-page-wonder.css
@@ -12,7 +12,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('../images/yosemite.jpeg') no-repeat fixed bottom center;
+    background: url('../images/borneo.JPG') no-repeat fixed bottom center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -26,13 +26,13 @@ body {
 .headline h1 {
     font-size: 130px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.7);
 }
 
 .headline h2 {
     font-size: 77px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.7);
 }
 
 .featurette-divider {
