Minor rewriting, added reduce, decreased font-size for small screens

--- a/umgauper.css
+++ b/umgauper.css
@@ -13,8 +13,12 @@ p {
     font-size: 24px;
 }
 
+a {
+     color: #00bcd4;
+ }
+
 a:visited {
-   color: #00bcd4;
+    color: #008da0;
 }
 
 img {
@@ -50,12 +54,16 @@ ul {
 @media all and (max-width: 800px) {
     .container {
         flex-direction: column;
-        padding: 30px;
+        padding: 20px;
     }
 
     .right, .left {
         width: 100%;
         padding: 0;
+    }
+
+    p {
+        font-size: 18px;
     }
 
     #about p {
